src/test/deca/context/valid/1_hello.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
// Hello, world
//
// Historique:
//    cree le 01/01/2022

{
        println("Hello, world");
}
