src/test/deca/context/invalid/tests/printlnBoolean.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 14: ContextualError: Print contextual Error
// 
// Historique:
//    cree le 01/01/2022

{
   boolean a;

   // Doit etre refuse.
   println(a);
}
